# prepmd

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  noxfile.py  pixi.toml  pyproject.toml  setup.py
.github/workflows/: desktop-apps.yml  docker-build-test.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.gui  README.md  docker-compose.dev.yml  docker-compose.gui.yml  docker-compose.yml  entrypoint.sh  gui-entrypoint.sh
docs/: api.rst  conf.py  config_overview.rst  config_reference.rst  configuration_schema.rst  index.rst
examples/: config.toml  config.yaml
prepmd/: __init__.py  caching.py  exceptions.py  logging_config.py  performance.py  structure_builder.py  types.py
prepmd/cli/: __init__.py  __main__.py  main.py  run_artifacts.py
prepmd/cli/commands/: init.py  setup.py
prepmd/config/: __init__.py  loader.py  models.py  versioning.py
prepmd/config/loaders/: __init__.py  base.py  toml_loader.py  yaml_loader.py
prepmd/config/validators/: __init__.py  base.py  compatibility.py  ensemble.py  pdb_input.py  pipeline.py  restraint.py  temperature.py
prepmd/core/: __init__.py  box_geometry.py  config.py  plan_fingerprint.py  protocols.py  reporting.py  run.py  simulation.py
prepmd/engines/: __init__.py  amber.py  base.py  charmm.py  factory.py  gromacs.py  namd.py  openmm.py
prepmd/engines/plugins/: __init__.py
prepmd/engines/plugins/amber/: __init__.py  engine.py
prepmd/engines/plugins/charmm/: __init__.py  engine.py
prepmd/engines/plugins/gromacs/: __init__.py  engine.py
prepmd/engines/plugins/namd/: __init__.py  engine.py
prepmd/engines/plugins/openmm/: __init__.py  engine.py
prepmd/file_generator/: __init__.py  base.py  comments.py
prepmd/file_generator/templates/: __init__.py  equilibration.py  heating.py  minimization.py  production.py
prepmd/gui/: __init__.py  __main__.py  console_widget.py  main.py
prepmd/gui/widgets/: __init__.py  water_box_config.py
prepmd/models/: results.py
prepmd/resources/: __init__.py  prepmd.schema.json  replica_readme.md.tmpl
prepmd/structure/: __init__.py  builder.py  pdb_handler.py
prepmd/structure_builder/: __init__.py  builder.py
prepmd/templates/: __init__.py  protocol_templates.py  readme_templates.py  workflow_script_templates.py
prepmd/tleap/: __init__.py  builder.py
prepmd/tools/: __init__.py  generate_schema.py
prepmd/utils/: __init__.py  logging.py
tests/: _golden.py  test_box_geometry.py  test_components.py  test_config_formats.py  test_config_loader.py  test_core_run.py  test_engine_plugins.py  test_golden_setup.py  test_gui_console_widget.py  test_gui_water_box_config.py  test_pdb_handler.py  test_plan_fingerprint.py  test_schema_generation.py  test_structure_builder.py  test_workflow_script_templates.py
tests/golden/basic-pdb-id/: tree.txt
tests/golden/basic-pdb-id/files/01_input/structures/: 1ABC.cif
tests/golden/basic-pdb-id/files/02_scripts/preparation/: apo_amber_prepare.in  holo_amber_prepare.in
tests/golden/basic-pdb-id/files/02_scripts/simulation/05_post_processing/: 01_strip_waters.cpptraj
tests/golden/basic-pdb-id/files/02_scripts/simulation/06_analysis/: 01_rmsd.cpptraj  02_rmsf.cpptraj
tests/golden/basic-pdb-id/files/05_simulations/apo/replica_001/: README.md
tests/golden/basic-pdb-id/files/05_simulations/apo/replica_001/02_scripts/analysis/: 04_hbond.cpptraj
tests/golden/basic-pdb-id/files/05_simulations/apo/replica_001/06_analysis/: 01_rmsd.cpptraj  02_rmsf.cpptraj
tests/golden/basic-pdb-id/files/05_simulations/holo/replica_001/: README.md
tests/golden/basic-pdb-id/files/05_simulations/holo/replica_001/01_minimization/01_full_restraint/: README.md
tests/golden/basic-pdb-id/files/05_simulations/holo/replica_001/06_analysis/: 01_rmsd.cpptraj  03_radius_of_gyration.cpptraj  04_hbond.cpptraj  05_sasa.cpptraj
tests/golden/truncated-orthorhombic-opc/: tree.txt
tests/golden/truncated-orthorhombic-opc/files/02_scripts/simulation/06_analysis/: 02_rmsf.cpptraj  03_radius_of_gyration.cpptraj
tests/golden/truncated-orthorhombic-opc/files/05_simulations/apo/replica_001/: README.md
tests/golden/truncated-orthorhombic-opc/files/05_simulations/apo/replica_001/02_heating/: README.md
tests/golden/truncated-orthorhombic-opc/files/05_simulations/apo/replica_001/05_post_processing/: 02_center.cpptraj
tests/golden/truncated-orthorhombic-opc/files/05_simulations/apo/replica_001/06_analysis/: 03_radius_of_gyration.cpptraj
tests/golden/truncated-orthorhombic-opc/files/05_simulations/holo/replica_001/: PROTOCOL.md  README.md  amber_prepare.in
tests/golden/truncated-orthorhombic-opc/files/05_simulations/holo/replica_001/05_post_processing/: 04_visualize_merged.vmd.tcl
tests/golden/truncated-orthorhombic-opc/files/05_simulations/holo/replica_001/06_analysis/: 05_sasa.cpptraj
(+7 files in other folders)
