[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prepmd"
version = "0.1.0"
description = "Configurable molecular dynamics simulation setup with multi-engine support (Amber, Gromacs, NAMD, CHARMM, OpenMM)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "tclick", email = "tclick@example.com"}
]
keywords = [
    "molecular-dynamics",
    "amber",
    "gromacs",
    "namd",
    "charmm",
    "openmm",
    "simulation",
    "biophysics",
    "computational-chemistry"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "black>=23.10.0",
    "ruff>=0.11.0",
    "basedpyright>=1.22.1",
    "mypy>=1.7.0",
    "types-pyyaml>=6.0.12.20240311",
]

[project.scripts]
prepmd = "prepmd.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["prepmd"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prepmd --cov-report=html --cov-report=term-missing"

[tool.basedpyright]
typeCheckingMode = "strict"
