[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prepmd"
version = "0.1.0"
description = "Configurable molecular dynamics simulation setup with multi-engine support (Amber, Gromacs, NAMD, CHARMM, OpenMM)"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "tclick", email = "tclick@example.com"}
]
keywords = [
    "molecular-dynamics",
    "amber",
    "gromacs",
    "namd",
    "charmm",
    "openmm",
    "simulation",
    "biophysics",
    "computational-chemistry"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "PyQt6>=6.7.1",
    "biopython>=1.85",
]

[project.optional-dependencies]
dev = [
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "ruff>=0.11.0",
    "basedpyright>=1.22.1",
    "typeguard>=4.4.2",
    "sphinx>=8.3.0",
    "sphinx-rtd-theme>=3.0.2",
    "types-pyyaml>=6.0.12.20240311",
]

[project.scripts]
prepmd = "prepmd.cli.main:main"
prepmd-gui = "prepmd.gui.main:main"

[project.entry-points."prepmd.engines"]
amber = "prepmd.engines.amber:AmberEngine"
gromacs = "prepmd.engines.gromacs:GromacsEngine"
namd = "prepmd.engines.namd:NamdEngine"
charmm = "prepmd.engines.charmm:CharmmEngine"
openmm = "prepmd.engines.openmm:OpenmmEngine"

[tool.hatch.build.targets.wheel]
packages = ["prepmd"]
include = ["prepmd/resources/*.json", "prepmd/resources/*.tmpl"]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [".pixi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PERF", "RUF"]
ignore = ["PERF401", "RUF012", "RUF022"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prepmd --cov-report=html --cov-report=term-missing"

[tool.basedpyright]
typeCheckingMode = "basic"
include = ["prepmd", "tests"]
strict = ["prepmd"]

[tool.typeguard]
collection-check-strategy = "ALL_ITEMS"

[tool.hypothesis]
max_examples = 40
deadline = 500

[tool.hypothesis.profiles.nightly]
max_examples = 200
deadline = 1200
